# living-nft-ic

./: .gitignore  Cargo.toml  README.md  dfx.json  package.json
src/: error.rs  lib.rs  personality.rs  types.rs
src/living_nft/: living_nft.did
src/living_nft_assets/src/: App.jsx  auth.jsx  index.jsx
src/living_nft_assets/src/components/: CreateNFT.jsx  Interaction.jsx
src/tests/: mod.rs
