[package]
name = "living_nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.1"
ic-cdk-macros = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.74"
futures = "0.3.28"
ic-stable-structures = "0.5.6"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
